--- a/SpringbootBuoi1/src/main/resources/templates/person/search.html
+++ b/SpringbootBuoi1/src/main/resources/templates/person/search.html
@@ -20,6 +20,8 @@
         <td th:text="${person.age}" ></td>
         <td th:text="${person.name}" ></td>
         <td th:text="${person.country}" ></td>
+        <td th:src="${person.FileUrl}" width="200"></td>
+
         <td>   <a th:href="@{'/person/get/' + ${person.id}}">View</a></td>
          <td> <a th:href="@{'/person/delete?id=' +${person.id} }" > Delete</a></td>
         <td> <a th:href="@{'/person/edit?id=' +${person.id} }" > Edit</a></td>
